8 January 2009: Matthijs
	- New nsd-patch option -o dbfile (set output.db)
	- update nsdc to deal with the new nsd-patch options

6 January 2009: Matthijs
	- New nsd-patch option -s (skip writing zonefiles)
	- Removed some region_create memchecks (not needed)

5 January 2009: Matthijs
	- Bug 218
	- Bug 222
	- Replace SHA256_DIGEST_LENGTH with nicer HAVE_EVP_SHA256

10 December 2008: Matthijs
	- Bugfix: better error message when ixfr.db cannot be read

18 November 2008: Matthijs
	- chown logfile, don't do file rotation if logfile is outside absolute 
		and outside chroot.

17 November 2008: Matthijs
	- File rotation for nsd.log when owned by nsd (+ tpkg test).
	- Only AXFR fallback if master responded NOTIMPL or FORMATERR on IXFR 
		request.
	- allow-axfr-fallback option.

7 November 2008: Matthijs
	- Bugfix: don't fclose if logfile == NULL.
	
30 October 2008: Matthijs
	- Allow escape characters in literal dnames
	- Fix typo in zonec manpage
	- Some fixes from code review

20 October 2008: Matthijs
	- Redo bugfix literal domain names in rdata (code adjustment)
	- Added tests for case sensitive dns names and "Bug #162"
	- Adjust nsd-patch to new ixfr.db format

14 October 2008: Matthijs
	- Only SO_LINGER when outgoing port is set
	- Reset diff_skip when a new difffile is created (parts in the difffile 
		now have a timestamp).
	- Undo bugfix literal domain names in rdata (code adjustment)
	- Split up dname_parse to parse literal dnames and normalized dnames.

3 October 2008: Matthijs
	- setsockopt SO_LINGER, for portability outgoing-interface (BSD/Solaris)

1 October 2008: Matthijs
	- Configure the source ip-address for notifies by the master and zone 
		transfer requests by the slave in nsd.conf.
	- Previously added source hostname/ip and port configuration for 
		nsd-notify and nsd-xfer
	- Finetuned nsdc for nsdc notify and nsdc update

29 September 2008: Matthijs
	- Bugfix: only normalize domain names in rdatas when rrtype is listed in 